# pp6calculator

./: .gitignore  CMakeLists.txt  PP6Math.cpp  PP6Math.hpp  README.md  pp6calculator  pp6calculator.cpp
Cpp_exercises/ex1/: ex1.cpp
Cpp_exercises/ex2/: ex2.cpp
Cpp_exercises/ex3/: ex3.cpp
FileReader/: FileReader.hpp
FourVec/: FourVec.cpp  FourVec.hpp
PP6Lib/: PP6Math.cpp  PP6Math.hpp
Particle/: Particle.cpp  Particle.hpp
ThreeVec/: ThreeVec.cpp  ThreeVec.hpp
